@@ -1,0 +1,11 @@
+<xsl:stylesheet version="1.0"
+      xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
+      xmlns:fo="http://www.w3.org/1999/XSL/Format">
+
+<xsl:variable name="x"/>
+
+<xsl:template match="doc">
+<doc x="{$x}"/>
+</xsl:template>
+
+</xsl:stylesheet>
