@@ -1,0 +1,5 @@
+<doc>
+<item>item1</item>
+<item>item2</item>
+<item>item3</item>
+</doc>
